update: chia test environment

--- a/src/ansible/inventory/test.yml
+++ b/src/ansible/inventory/test.yml
@@ -1,8 +1,9 @@
 all:
   children:
-    farmer:
-      hosts:
-        chiatest.fritz.box
     fullnode:
       hosts:
-        chiatest.fritz.box
+#        chiatest.fritz.box
+        chia-full01.fritz.box
+    farmer:
+      hosts:
+#        chiatest.fritz.box
